[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/images/meteorBrown_small2.png" type="Texture" id=1]
[ext_resource path="res://Assets/images/meteorBrown_med3.png" type="Texture" id=2]
[ext_resource path="res://Assets/images/meteorBrown_med1.png" type="Texture" id=3]
[ext_resource path="res://Assets/images/meteorBrown_tiny1.png" type="Texture" id=4]
[ext_resource path="res://Assets/images/meteorBrown_big2.png" type="Texture" id=5]
[ext_resource path="res://Assets/images/meteorBrown_small1.png" type="Texture" id=6]
[ext_resource path="res://Assets/images/meteorBrown_big3.png" type="Texture" id=7]
[ext_resource path="res://Assets/images/meteorBrown_big4.png" type="Texture" id=8]
[ext_resource path="res://Assets/images/meteorBrown_big1.png" type="Texture" id=9]
[ext_resource path="res://Assets/images/meteorBrown_tiny2.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Meteor.gd" type="Script" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 47.2652

[sub_resource type="CapsuleShape2D" id=2]
radius = 37.6662
height = 35.2231

[sub_resource type="CircleShape2D" id=3]
radius = 41.1096

[sub_resource type="CircleShape2D" id=4]
radius = 46.0109

[sub_resource type="CircleShape2D" id=5]
radius = 20.025

[sub_resource type="CircleShape2D" id=6]
radius = 23.0

[sub_resource type="CircleShape2D" id=7]
radius = 12.3693

[sub_resource type="CircleShape2D" id=8]
radius = 12.1655

[sub_resource type="CircleShape2D" id=9]

[sub_resource type="CircleShape2D" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0.901961, 0, 1 )

[node name="Meteor" type="Area2D"]
script = ExtResource( 11 )

[node name="Big1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 9 )

[node name="Big2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Big3" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="Big4" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )

[node name="Medium1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Medium2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Small1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="Small2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Tiny1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Tiny2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 10 )

[node name="ShapeBig1" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="ShapeBig2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -5, -4 )
rotation = 1.14319
shape = SubResource( 2 )

[node name="ShapeBig3" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="ShapeBig4" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="ShapeMedium1" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="ShapeMedium2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 6 )

[node name="ShapeSmall1" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="ShapeSmall2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="ShapeTiny1" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 9 )

[node name="ShapeTiny2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 10 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -10.0
margin_top = 15.0
margin_right = 10.0
margin_bottom = 18.0
custom_styles/fg = SubResource( 11 )
step = 0.01
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_Meteor_area_entered"]
